Enable required columns in Azure datasets